# ai-mini-game

./: LICENSE
elder_brother/: README.md  game.js  index.html  style.css
fluent_english/: .env.example  .gitignore  CLAUDE.md  CODE.md  README.md  chat_agent.py  pyproject.toml  requirements.txt  web_main.py
fluent_english/docs/: CODE.md
fluent_english/static/: index.html
